Bug 15689 - 2.6.34-rc3 breaks headphone-output for ALC262
Summary: 2.6.34-rc3 breaks headphone-output for ALC262
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks: 15310
  Show dependency tree
 
Reported: 2010-04-04 11:14 UTC by Adrian Ulrich
Modified: 2010-04-07 20:14 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.34-rc3
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
alsa-info output (21.17 KB, text/plain)
2010-04-05 11:21 UTC, Adrian Ulrich
Details
alsa-info with vanilla kernel (patch NOT reverted - non working headphone jack) (19.88 KB, text/plain)
2010-04-05 13:32 UTC, Adrian Ulrich
Details
Fix the broken array range check in patch_realtek.c (1.16 KB, patch)
2010-04-05 21:33 UTC, Takashi Iwai
Details | Diff
(Revised) Fix the broken array range check in patch_realtek.c (1.31 KB, patch)
2010-04-05 21:39 UTC, Takashi Iwai
Details | Diff

Description Adrian Ulrich 2010-04-04 11:14:21 UTC
With Linux 2.6.34-rc3 the headphone output on my Sony VPCW21Z1E stopped working: The builtin speakers still work and the headphone *detection* also works (mutes internal speakers), but there is no sound on the headphone jack.

The PCM-Device is also missing in alsamixer.

Reverting

http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=patch;h=6a4f2ccb467e00281470cde2dee08fe5ecde62d1

brings the PCM-device back and headphone-out also works like it used to in 2.6.34-rc2


Hardware information:
00:1b.0 Audio device: Intel Corporation 82801G (ICH7 Family) High Definition Audio Controller (rev 02)
        Subsystem: Sony Corporation Device 9066
        Flags: bus master, fast devsel, latency 0, IRQ 28
        Memory at 56200000 (64-bit, non-prefetchable) [size=16K]
        Capabilities: [50] Power Management version 2
        Capabilities: [60] MSI: Enable+ Count=1/1 Maskable- 64bit+
        Capabilities: [70] Express Root Complex Integrated Endpoint, MSI 00
        Capabilities: [100] Virtual Channel <?>
        Capabilities: [130] Root Complex Link <?>
        Kernel driver in use: HDA Intel
        Kernel modules: snd-hda-intel


/proc/asound/..../codec#0
Codec: Realtek ALC262
Address: 0
Function Id: 0x1
Vendor Id: 0x10ec0262
Subsystem Id: 0x104d3e00
Revision Id: 0x100302
No Modem Function Group found
Comment 1 Takashi Iwai 2010-04-05 09:19:38 UTC
Then it worked accidentally in the former versions :)

Could you attach alsa-info.sh output (run with --no-upload option)?
Comment 2 Adrian Ulrich 2010-04-05 11:21:23 UTC
Created attachment 25863 [details]
alsa-info output

Ok, here it is.

The Output is from 2.6.34-rc3 with 6a4f2ccb467e00281470cde2dee08fe5ecde62d1 reverted.
Comment 3 Takashi Iwai 2010-04-05 11:52:47 UTC
Could you give both before and after revert to compare?
Comment 4 Adrian Ulrich 2010-04-05 13:32:36 UTC
Created attachment 25866 [details]
alsa-info with vanilla kernel (patch NOT reverted - non working headphone jack)

this is the alsa-info output with a plain vanilla 2.6.34-rc3 kernel module (patch not reverted, headphone not working)
Comment 5 Rafael J. Wysocki 2010-04-05 21:21:21 UTC
Handled-By : Takashi Iwai <tiwai@suse.de>
Comment 6 Takashi Iwai 2010-04-05 21:32:29 UTC
Thanks.  It's indeed a stupid bug introduced by that commit.
Fixed by the patch below.
Comment 7 Takashi Iwai 2010-04-05 21:33:44 UTC
Created attachment 25871 [details]
Fix the broken array range check in patch_realtek.c
Comment 8 Takashi Iwai 2010-04-05 21:39:31 UTC
Created attachment 25872 [details]
(Revised) Fix the broken array range check in patch_realtek.c

Sorry, pasted a wrong one in the above...
Comment 9 Rafael J. Wysocki 2010-04-05 21:46:34 UTC
Patch : https://bugzilla.kernel.org/attachment.cgi?id=25872
Comment 10 Rafael J. Wysocki 2010-04-07 20:14:45 UTC
Fixed by commit f9700d5a4575e7fb343df10a1d29d425e4b81082 .

Note You need to log in before you can comment on or make changes to this bug.